# mctp-ncsi

./: README.md  meson.build
src/: mctp-ncsi.c
